# arXiv-mcp

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_OVERVIEW_MCP_BACKEND.md  __init__.py  models.py  pyproject.toml  requirements.txt  test_smoke.py  tmp_check_db.py
arxiv_mcp/: __init__.py
mnt/user-data/outputs/arxiv-mcp/src/arxiv_client/: __init__.py
mnt/user-data/outputs/arxiv-mcp/src/context_builder/: __init__.py
mnt/user-data/outputs/arxiv-mcp/src/pdf_fetcher/: __init__.py
mnt/user-data/outputs/arxiv-mcp/src/pdf_parser/: __init__.py
paperstack_mcp/: __init__.py
src/: console.py  logger.py  models.py
src/devtools/: __init__.py  implementation_differ.py  link_extractor.py  reproducibility_scorer.py
src/devtools/prompts/: diff.txt
src/intelligence/: semantic_index.py
src/mcp_server/: __init__.py  __main__.py
src/workflows/: db.py  explainer.py  reading_list.py  topic_watcher.py
src/workflows/prompts/: explain.txt
