[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "Model Context Protocol server for arXiv PDF retrieval and LLM context generation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "arxiv MCP Team"}]
dependencies = [
  "mcp>=1.0.0",
  "arxiv>=2.1.0",
  "httpx>=0.27.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.0.0",
  "tenacity>=8.2.0",
  "tiktoken>=0.7.0",
  "structlog>=24.0.0",
  "aiofiles>=23.0.0",
  "python-dotenv>=1.0.0",
  "anyio>=4.0.0"
]

[project.urls]
"Homepage" = "https://github.com/arxiv-mcp/arxiv-mcp"
"Repository" = "https://github.com/arxiv-mcp/arxiv-mcp"

[project.scripts]
arxiv-mcp = "src.console:entrypoint"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
